crates/biome_cli/tests/snapshots/main_commands_format/override_don_t_affect_ignored_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format . --write
```

## `biome.json`

```json
{
  "overrides": [
    {
      "includes": ["**", "!file2.js"]
    }
  ]
}
```

## `file1.js`

```js
statement();

```

## `file2.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 3 files in <TIME>. Fixed 3 files.
```
