crates/biome_cli/tests/snapshots/main_commands_format/print_minimal.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `format.js`

```js
  statement(  )  
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
format.js format 

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
