crates/biome_cli/tests/snapshots/main_commands_format/scss_lint.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint lint.scss
```

## `lint.scss`

```scss
$color: red;
.element { transform: unknown(1); color: $color; }
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
lint.scss:2:23 lint/correctness/noUnknownFunction ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected unknown function: unknown
  
    1 │ $color: red;
  > 2 │ .element { transform: unknown(1); color: $color; }
      │                       ^^^^^^^
  
  i Use a known function instead.
  
  i See MDN web docs for more details.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
